# aws-route53-manager

./: .gitignore  BUILD.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
aws_route53_manager/: __init__.py  __main__.py  _version.py  cli.py  enums.py  errors.py  logging.py  manager.py  models.py  validation.py
tests/: test_cli.py  test_manager.py  test_models.py  test_package.py  test_python310_compatibility.py  test_validation.py
