[build-system]
requires = ["hatch-vcs>=0.4", "hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "aws-route53-manager"
dynamic = ["version"]
description = "A small Python CLI for managing single Route 53 DNS records."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3>=1.34",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
aws-route53-manager = "aws_route53_manager.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "node-and-date"
version_scheme = "guess-next-dev"

[tool.hatch.build.hooks.vcs]
version-file = "aws_route53_manager/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["aws_route53_manager"]

[tool.hatch.build.targets.sdist]
include = [
    "/aws_route53_manager",
    "/BUILD.md",
    "/LICENSE",
    "/README.md",
    "/tests",
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "python -m unittest discover -s tests -v"
build = "hatch build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 140
target-version = "py310"
extend-exclude = ["aws_route53_manager/_version.py"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
